# agent-mesh

./: Dockerfile  LICENSE  README.md  SETUP_PROMPT.md  docker-compose.yml  pyproject.toml
src/agent_mesh/: cli.py  core.py  gate.py  mcp_server.py  notify.py  pending.py  registry.py  store.py  streams.py  transport.py  validate.py
