[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-mesh"
version = "0.2.0"
description = "Zero-dependency inter-agent messaging MCP server (embedded SQLite, no external services)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Leonard Wecke" }]
keywords = ["mcp", "claude", "agents", "messaging", "multiplexer", "sqlite"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications",
]
dependencies = [
    "click>=8.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
http = ["starlette", "uvicorn"]

[project.urls]
Homepage = "https://github.com/NG-Bullseye/agent-mesh"
Repository = "https://github.com/NG-Bullseye/agent-mesh"

[project.scripts]
agent-mesh = "agent_mesh.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
